--- a/static/styles/mainpage.css
+++ b/static/styles/mainpage.css
@@ -19,9 +19,10 @@ h3 {
     width: fit-content;
     height: fit-content;
     background-color: rgba(255, 255, 255, 0.651);
-    display: flex;
+    /*display: flex;*/
     justify-content: center;
 }
+
 
 #astronames {
     background-color: rgba(255, 255, 255, 0.664);
