--- a/templates/index.html
+++ b/templates/index.html
@@ -13,9 +13,9 @@
 <body>
     <h1>Know the ISS</h1>
     <div id="fp">
-        <p>The International Space Station is a modular space station (habitable artificial satellite) in low Earth
+        <p id="cont">The International Space Station is a modular space station (habitable artificial satellite) in low Earth
             orbit.</p>
-        <p> It is a multinational collaborative project involving five participating space agencies: NASA (United
+        <p id="cont"> It is a multinational collaborative project involving five participating space agencies: NASA (United
             States), Roscosmos (Russia), JAXA (Japan), ESA (Europe), and CSA (Canada).
         </p>
     </div>
